Add component Relevant

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works! zfasgarfg</p>
+<header class="header fixed-top">
+    <div class="slogan">
+        <h1>¡Descubre tu camino con nuestra guía exclusiva! ¡Gratis!</h1>
+    </div>
+</header>
