--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-navmenu *ngIf="IsAuthenticated"></app-navmenu> -->
-
+<app-header></app-header>
 <div class="container">
     <router-outlet></router-outlet>
 </div>
