Component Relevant and oferta

--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -1,5 +1,5 @@
-.movies-container{
-    display:flex;
-    justify-content: space-between;
+.home-container{
+    /* display:flex; */
+    /* justify-content: space-between; */
     margin-top: 5rem;
 }
