--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,3 +1,5 @@
-<div class="movies-container">
+<div class="home-container">
     <app-relevante></app-relevante>
+    <app-oferta></app-oferta>
  </div>
+<br> <br><br>
