--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -1,8 +1,52 @@
-<p>relevante works!</p>
-<section class="main-section pad-70">
-    <div class="headline">
-        <span>KIPPER CONSULTORIA</span>
-        <h1>A consultoria que você busca para seu software</h1>
+<main>
+    <section class="main-section pad-70 card-responsive">
+        <div class="headline">
+            <span>INTELLIGENT WORLD</span>
+            <h1>Cumple tu sueño de estudiar en el exterior</h1>
+        </div>
+        <img src="assets\principal.jpeg" width="469" height="506">
+    </section>
+
+
+    <!-- <section class="main-section pad-70">
+        <div class="container py-4">
+            <div class="row g-0">
+                <div class="col-4">
+                    <div class="card-body">
+                        <span>INTELLIGENT WORLD</span>
+                        <h1 class="h6 card-subtitle text-muted mb-2">Cumple tu sueño de estudiar en el exterior</h1>
+                        <h1>Cumple tu sueño de estudiar en el exterior</h1>
+                    </div>
+                </div>
+                <div class="col-8"> 
+                    <img class="img-fluid" src="assets\principal.jpeg" width="469" height="536" >
+                </div>
+            </div>
+            </div>
+    </section> -->
+
+
+<!-- <div class="container py-4">
+<div class="row g-0">
+    <div class="col-4">
+        <div class="card-body">
+            <span>INTELLIGENT WORLD</span>
+            
+            <h1>Cumple tu sueño de estudiar en el exterior</h1>
+        </div>
     </div>
-    <img ngSrc="/assets/principal.png" width="669" height="536">
-</section>
+    <div class="col-8"> 
+        <img class="img-fluid rounded card1" src="assets\principal.jpeg" >
+    </div>
+    <div class="col-12">
+        <div class="card-body">
+            <span>INTELLIGENT WORLD</span> 
+            
+            <h1>Cumple tu sueño de estudiar en el exterior</h1>
+        </div>
+    </div>
+</div>
+</div> -->
+
+     
+</main>
