--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -30,11 +30,19 @@ h1 {
   text-align: center;
   font-size: 30px;
 }
-@media only screen and (max-width: 800px) {
+@media (min-width: 350px) and (max-width: 710px) {
 	h1 {
         margin-top: 0px;
         text-align: center;
         font-size: 20px;
+      }
+}
+
+@media (min-width: 710px) and (max-width: 1025px) {
+	h1 {
+        margin-top: 0px;
+        text-align: center;
+        font-size: 30px;
       }
 }
 
