--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+    --primary-text: #0F172A;
+    --secondary-text: #475569;
+    --primary-color: #8455FF;
+    --secondary-color: #5222D0;
+    --light-primary-color: #B79FF7;
+    --bg-secondary: #351686;
+  }
