--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="home-container">
     <app-relevante></app-relevante>
     <app-oferta></app-oferta>
+    <app-main-btn></app-main-btn>
  </div>
 <br> <br><br>
