--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -1,11 +1,27 @@
 <main>
-    <section class="main-section pad-70 card-responsive">
+
+    <!-- <div class="container-flex">
+        <div class="title-container">
+            <h2>
+               <img src="assets\volar.png">
+            </h2>
+            
+        </div>
+    </div> -->
+
+    <div class="main-section pad-70 card-responsive">
         <div class="headline">
             <span>INTELLIGENT WORLD</span>
             <h1>Cumple tu sueño de estudiar en el exterior</h1>
+            <div class="center">
+                <app-main-btn></app-main-btn>
+            </div>
+         
         </div>
-        <img src="assets\principal.jpeg" width="469" height="506">
-    </section>
+        <img src="assets\principal.jpeg" width="380" height="416">
+    </div>
+
+    
 
 
     <!-- <section class="main-section pad-70">
