--- a/src/app/components/pages/oferta/oferta.component.html
+++ b/src/app/components/pages/oferta/oferta.component.html
@@ -1,21 +1,26 @@
 <main>
-<section class="benefit-section pad-70">
+<section class="benefit-section pad-70 card-responsive">
     <div class="benefit-data">
-        <h2>
-            <b>10 cupos</b><br/>
-            con tarifa <br/>
-            especial
-        </h2>
-        <!-- <h2>
-            10 cupos<br/>
-            con tarifa especial
-        </h2>
-        <h2>
-            10 cupos<br/>
-            con tarifa especial
-        </h2> -->
+        <div class="colm">
+            <h2>
+                <b>10 cupos</b><br/>
+                con tarifa <br/>
+                especial
+            </h2>
+        </div>
     </div>
-    <p>Accede nuestro  <b>nuestro seminario gratuito de tres días </b> en donde te contaremos absolutamente todo lo que necesitas saber para cumplir tu sueño de estudiar en el exterior.</p>
+    <div class="benefit-data">
+        <div class="colm">
+            <h2>
+                <b>Sorteo</b><br/> 
+                <b>Viaje  </b> <br/>
+                gratis <br/>
+                desde Bogotá
+            </h2>
+        </div>
+    </div>
+    <!-- <p>Accede nuestro  <b>nuestro seminario gratuito de tres días </b> en donde te contaremos absolutamente todo lo que necesitas saber para cumplir tu sueño de estudiar en el exterior.</p> -->
+    <p>Únete a nuestro <b>seminario gratuito de tres días </b> y obtén toda la información para hacer realidad tu sueño de estudiar en el extranjero.</p>
 </section>
  
 </main>
