--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -10,10 +10,17 @@
 .header{
     text-align: center;
     
-    background: rgba( 14, 42, 81, 0.85 );
+    /* background: rgba( 14, 42, 81, 0.85 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px ); */
+
+    background: rgba( 14, 33, 81, 0.7 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 7px );
+    -webkit-backdrop-filter: blur( 7px );
+
+
   
     /* background: rgba( 14, 56, 81, 0.85 );
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -28,7 +35,7 @@ backdrop-filter: blur( 20px );
 h1 {
     margin-top: 15px;
   text-align: center;
-  font-size: 30px;
+  font-size: 29px;
 }
 @media (min-width: 350px) and (max-width: 710px) {
 	h1 {
