--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,6 +1,9 @@
 <div class="home-container">
     <app-relevante></app-relevante>
     <app-oferta></app-oferta>
-    <app-main-btn></app-main-btn>
+    <div class="center">
+        <app-main-btn></app-main-btn>
+    </div>
+    
  </div>
 <br> <br><br>
