--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -1,18 +1,11 @@
 <main>
-
-    <!-- <div class="container-flex">
-        <div class="title-container">
-            <h2>
-               <img src="assets\volar.png">
-            </h2>
-            
-        </div>
-    </div> -->
-
     <div class="main-section pad-70 card-responsive">
         <div class="headline">
+            <div class="center">
+                <img src="assets\volar.png" alt="">
+            </div>
             <span>INTELLIGENT WORLD</span>
-            <h1>Cumple tu sueño de estudiar en el exterior</h1>
+            <h1>Cumple tu sueño de estudiar en el exterior!</h1>
             <div class="center">
                 <app-main-btn></app-main-btn>
             </div>
@@ -20,49 +13,4 @@
         </div>
         <img src="assets\principal.jpeg" width="380" height="416">
     </div>
-
-    
-
-
-    <!-- <section class="main-section pad-70">
-        <div class="container py-4">
-            <div class="row g-0">
-                <div class="col-4">
-                    <div class="card-body">
-                        <span>INTELLIGENT WORLD</span>
-                        <h1 class="h6 card-subtitle text-muted mb-2">Cumple tu sueño de estudiar en el exterior</h1>
-                        <h1>Cumple tu sueño de estudiar en el exterior</h1>
-                    </div>
-                </div>
-                <div class="col-8"> 
-                    <img class="img-fluid" src="assets\principal.jpeg" width="469" height="536" >
-                </div>
-            </div>
-            </div>
-    </section> -->
-
-
-<!-- <div class="container py-4">
-<div class="row g-0">
-    <div class="col-4">
-        <div class="card-body">
-            <span>INTELLIGENT WORLD</span>
-            
-            <h1>Cumple tu sueño de estudiar en el exterior</h1>
-        </div>
-    </div>
-    <div class="col-8"> 
-        <img class="img-fluid rounded card1" src="assets\principal.jpeg" >
-    </div>
-    <div class="col-12">
-        <div class="card-body">
-            <span>INTELLIGENT WORLD</span> 
-            
-            <h1>Cumple tu sueño de estudiar en el exterior</h1>
-        </div>
-    </div>
-</div>
-</div> -->
-
-     
 </main>
