--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -4,6 +4,12 @@
     <div class="center">
         <app-main-btn></app-main-btn>
     </div>
-    
+    <div class="fondo1">
+        <app-testimonials></app-testimonials>
+    </div>
+    <div class="center">
+        <app-main-btn></app-main-btn>
+    </div>
+  
  </div>
 <br> <br><br>
