--- a/src/app/components/pages/main-btn/main-btn.component.css
+++ b/src/app/components/pages/main-btn/main-btn.component.css
@@ -26,6 +26,14 @@
     }
 }
 
+.zoom {
+	transition: transform 0.2s;
+}
+
+.zoom:hover {
+	transform: scale(1.5);
+}
+
 @media (min-width: 768px) {
     .btn {
         padding: 20px 40px;
