Add effects cards

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -4,7 +4,9 @@
     <div class="center">
         <app-main-btn></app-main-btn>
     </div>
-    <div class="fondo1">
+    <div class="circle"></div>
+
+    <div class="fondo center">
         <app-testimonials></app-testimonials>
     </div>
     <div class="center">
