--- a/src/app/components/pages/main-btn/main-btn.component.html
+++ b/src/app/components/pages/main-btn/main-btn.component.html
@@ -1,4 +1,4 @@
-<button  class="zoom"
+<button  class="shine-effect"
     (click)="submit()" 
     [class]="'btn ' + variant"
     [disabled]="disabled"
