--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -11,6 +11,8 @@
             </div>
          
         </div>
-        <img src="assets\principal.jpeg" width="380" height="416">
+        <div class="image-container main-img">
+            <img class="imagej1" src="assets\principal.jpeg" width="380" height="416">
+        </div>
     </div>
 </main>
