--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,9 @@
     --secondary-text: #475569;
     --primary-color: #8455FF;
     --secondary-color: #5222D0;
+    --third-color: #3e2eb2;
     --light-primary-color: #B79FF7;
     --bg-secondary: #351686;
+
+    
   }
