--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -10,8 +10,14 @@
 }
 
 .fondo{
-    background: rgba( 14, 33, 81, 0.7 );
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: rgba( 14, 33, 81, 0.8 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 7px );
     -webkit-backdrop-filter: blur( 7px );
+    border-radius: 2px;
 }
+
+
+  
