--- a/src/app/components/pages/testimonials/testimonials.component.html
+++ b/src/app/components/pages/testimonials/testimonials.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="card">
+    <div class="card zoom">
         <div class="content-card" >
             <div class="image">
 
@@ -12,6 +12,13 @@
               <h4>Alejandro </h4>
               <h5>Rusia, Programación </h5>
               <p>David nos ofreció un servicio excepcional al llevarnos de Bogotá a Rostov del Don, Rusia. Nos preparó para nuestra experiencia y tuvimos tiempo para explorar Moscú, ¡el metro fue una maravilla!</p>
+              <div class="rating"> 
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+              </div>
           </div>
         </div>
     </div>
@@ -30,6 +37,13 @@
               <h4>Oscar</h4>
               <h5>Rusia, Maestría en arquitectura </h5>
               <p>“Fui a estudiar una maestría y quedé impresionado por el tema de costos. El viaje fue perfecto y aprecié mucho el profesionalismo de la empresa. Recomiendo totalmente.”</p>
+              <div class="rating">
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+              </div>
           </div>
         </div>
     </div>
@@ -48,6 +62,13 @@
               <h4>Sharon </h4>
               <h5>Rusia, Medicina</h5>
               <p>“Con David y Hans a mi lado, mis nervios desaparecieron. El papeleo fue más fácil de lo que esperaba y antes de darme cuenta, estaba cumpliendo mi sueño en Rusia.”</p>
+              <div class="rating">
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+                <span>&#9734;</span>
+              </div>
           </div>
         </div>
     </div>
