--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -12,6 +12,7 @@
     <div class="center">
         <app-main-btn></app-main-btn>
     </div>
+    <app-collage-students></app-collage-students>
   
  </div>
 <br> <br><br>
