--- a/src/app/components/pages/testimonials/testimonials.component.html
+++ b/src/app/components/pages/testimonials/testimonials.component.html
@@ -24,7 +24,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="card">
+    <div class="card zoom">
         <div class="content-card" >
             <div class="image">
 
@@ -49,7 +49,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="card">
+    <div class="card zoom">
         <div class="content-card" >
             <div class="image">
 
