--- a/src/app/components/pages/relevante/relevante.component.css
+++ b/src/app/components/pages/relevante/relevante.component.css
@@ -2,8 +2,57 @@ main {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    
     /* margin-top: 20px; */
 }
+/* .fondotest{
+    height: 500px;
+    width: auto;
+    background-image: url("/assets/principal.jpeg");
+    background-size: cover;
+    background-position: 25% 50%;
+    border-radius: 2%;
+    overflow: hidden; 
+    filter: blur(0.5px);
+} */
+
+.fondotest {
+    position: relative;
+    height: 500px;
+    width: auto;
+    overflow: hidden;
+}
+
+.borde-difuminado {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/assets/principal.jpeg");
+    background-size: cover;
+    background-position: 25% 50%;
+    border-radius: 20px; /* Ajusta el valor según lo desees */
+    filter: blur(400px); /* Ajusta el valor del difuminado según lo desees */
+}
+
+/* Para que la imagen de fondo original no tenga el borde difuminado */
+.fondotest::before {
+    content: "";
+    position: absolute;
+    top: 10px; /* Ajusta el valor según el tamaño del borde difuminado */
+    left: 10px; /* Ajusta el valor según el tamaño del borde difuminado */
+    right: 10px; /* Ajusta el valor según el tamaño del borde difuminado */
+    bottom: 10px; /* Ajusta el valor según el tamaño del borde difuminado */
+    background-image: url("/assets/principal.jpeg");
+    background-size: cover;
+    background-position: 25% 50%;
+    border-radius: 10px; /* Ajusta el valor según el tamaño del borde difuminado */
+}
+
+
+
+
 .center{
     text-align: center;
     /* margin-left: 50px; */
@@ -52,13 +101,15 @@ width: 20ch;
     font-family: "Roboto", sans-serif;
 
     span {
+        text-align: justify;
         font-size: 24px;
         font-weight: 700;
         color: var(--secondary-text);
     }
     
     h1 {
-        font-size: 36px;
+        text-align: justify;
+        font-size: 38px;
         font-weight: 900;
         color: var(--primary-text);
     }
@@ -67,13 +118,13 @@ width: 20ch;
         max-width: 100%;
         height: auto;
         border-radius:10%;
-        /* border:dashed  4px var(--third-color); */
+           
     }
-    .main-img img{
-        max-width: 100%;
-        height: auto;
+    /* .main-img img{
+        max-width: 300px;
+        height: 200px;
         border-radius:10%;
         border:dashed  4px var(--third-color);
-    } 
+    }  */
 }
 
