--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -1,18 +1,23 @@
 <main>
+    <section class="fondo-color">
     <div class="main-section pad-70 card-responsive">
         <div class="headline">
-            <div class="center">
+            <!-- <div class="center">
                 <img src="assets\volar.png" alt="">
-            </div>
+            </div> -->
             <span>INTELLIGENT WORLD</span>
+            
             <h1>Cumple tu sueño de estudiar en el exterior!</h1>
-            <div class="center">
+            <!-- <div class="center">
                 <app-main-btn></app-main-btn>
-            </div>
-         
-        </div>
-        <div class="image-container main-img">
-            <img class="imagej1" src="assets\principal.jpeg" width="380" height="416">
+            </div> -->
+            <section class="fondotest"></section>
         </div>
     </div>
+</section>
 </main>
+<section class="fondotest"></section>
+
+<div class="fondotest">
+    <div class="borde-difuminado"></div>
+</div>
