--- a/src/app/components/pages/collage-students/collage-students.component.css
+++ b/src/app/components/pages/collage-students/collage-students.component.css
@@ -12,7 +12,18 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
+  width: min(90%, 100rem);
+  margin: 0 auto;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+} */
+
+.main {
   width: min(90%, 100rem);
   margin: 0 auto;
   height: 100vh;
@@ -101,7 +112,7 @@ section {
     }
 
     img {
-      border-radius: 25px;
+      border-radius: 10px;
     }
     .card__img {
       position: relative;
