--- a/src/app/components/pages/collage-students/collage-students.component.html
+++ b/src/app/components/pages/collage-students/collage-students.component.html
@@ -1,5 +1,5 @@
+<div class="main1">
 <section>
-    
     <div class="card">
       <div class="card__img">
         <img src="assets\Estudiantes\IMG_0771(1).jpg" alt="Big Ben">
@@ -30,5 +30,5 @@
         <img src="assets\Estudiantes\photo_2022-11-04_14-41-12(1).jpg" alt="Sydney Opera House">
       </div>
     </div>
-  
   </section>
+</div>
