Created carousels and update testimonials

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -7,7 +7,7 @@
     <div class="circle"></div>
 
     <div class="fondo center">
-        <app-testimonials></app-testimonials>
+        <app-testimonials [items]="testimonialData"></app-testimonials>
     </div>
     <div class="center">
         <app-main-btn></app-main-btn>
