--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,14 @@
     --secondary-text: #475569;
     --primary-color: #8455FF;
     --secondary-color: #5222D0;
+    /* --secondary-color: #0833a2; */
     --third-color: #3e2eb2;
     --light-primary-color: #B79FF7;
     --bg-secondary: #351686;
 
+    --four-color: #0e2151cc;
+
+    /* --primary-color: #0833a2; */
+    /* #0e2151cc */
     
   }
