--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -2,22 +2,28 @@
     <section class="fondo-color">
     <div class="main-section pad-70 card-responsive">
         <div class="headline">
-            <!-- <div class="center">
-                <img src="assets\volar.png" alt="">
-            </div> -->
             <span>INTELLIGENT WORLD</span>
-            
             <h1>Cumple tu sueño de estudiar en el exterior!</h1>
-            <!-- <div class="center">
-                <app-main-btn></app-main-btn>
-            </div> -->
-            <section class="fondotest"></section>
         </div>
     </div>
 </section>
 </main>
-<section class="fondotest"></section>
-
-<div class="fondotest">
-    <div class="borde-difuminado"></div>
+<div class="container-fluid px-0">
+    <div class="row bg-dark h-100">
+        <div class="col-12 px-0">
+            <app-main-carousel [items]="carouselData"></app-main-carousel>
+        </div>
+    </div>
 </div>
+
+
+<!-- <div class="container-fluid px-0">
+    <div class="row bg-dark h-100">
+        <div class="col-12 px-0"> -->
+            <!-- <app-carousel-logos [images]="carouselData" [autoSlide]="false"></app-carousel-logos> -->
+        <!-- </div>
+    </div>
+</div> -->
+
+
+
