--- a/src/app/components/pages/oferta/oferta.component.html
+++ b/src/app/components/pages/oferta/oferta.component.html
@@ -1,16 +1,18 @@
-<main>
-<section class="benefit-section pad-70 card-responsive">
+<div class="main">
+<div class="benefit-section pad-70 card-responsive">
+<div  class="benefit-section pad-70">
     <div class="benefit-data">
-        <div class="colm">
+        <div>
             <h2>
-                <b>10 cupos</b><br/>
+                <b>10</b><br/>
+                <b>cupos</b><br/>
                 con tarifa <br/>
                 especial
             </h2>
         </div>
     </div>
     <div class="benefit-data">
-        <div class="colm">
+        <div >
             <h2>
                 <b>Sorteo</b><br/> 
                 <b>Viaje  </b> <br/>
@@ -19,7 +21,17 @@
             </h2>
         </div>
     </div>
+    <div class="benefit-data-words">
+        <div >
+            <h2>
+                <b>Viaja</b><br/> 
+                <b>Descubre  </b> <br/>
+                <b>Vive  </b> <br/>
+                <b>Atrévete  </b> <br/>
+            </h2>
+        </div>
+    </div>
+</div>
     <p>Únete a nuestro <b>seminario gratuito de tres días </b> y obtén toda la información para hacer realidad tu sueño de estudiar en el extranjero.</p>
-</section>
-
-</main>
+</div>
+</div>
