--- a/src/app/components/pages/relevante/relevante.component.html
+++ b/src/app/components/pages/relevante/relevante.component.html
@@ -1,20 +1,20 @@
-<main>
-    <section class="fondo-color">
-    <div class="main-section pad-70 card-responsive">
-        <div class="headline">
-            <span>INTELLIGENT WORLD</span>
-            <h1>Cumple tu sueño de estudiar en el exterior!</h1>
-        </div>
-    </div>
-</section>
-</main>
-<div class="container-fluid px-0">
-    <div class="row bg-dark h-100">
-        <div class="col-12 px-0">
-            <app-main-carousel [items]="carouselData"></app-main-carousel>
+<div class="main">
+    <div class="fondo-color">
+        <div class="main-section pad-70 card-responsive">
+            <div class="center">
+                <span>INTELLIGENT WORLD</span>
+                <h1>Cumple tu sueño de estudiar en el exterior!</h1>
+            </div>
         </div>
     </div>
 </div>
+<!-- <div class="container-fluid px-0">
+    <div class="row bg-dark h-100">
+        <div class="col-12 px-0"> -->
+            <app-main-carousel [items]="carouselData"></app-main-carousel>
+        <!-- </div>
+    </div>
+</div> -->
 
 
 <!-- <div class="container-fluid px-0">
