--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="header fixed-top">
     <div class="slogan">
-        <h1>¡Descubre tu camino con nuestra guía exclusiva! <b>¡Seminario Gratis!</b></h1>
+        <h1>¡Descubre tu camino con nuestra guía exclusiva! <br/>
+             <a href=""><b>¡Seminario Gratis!</b></a></h1>
     </div>
 </header>
