--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -9,34 +9,24 @@
 
 .header{
     text-align: center;
-    
-    /* background: rgba( 14, 42, 81, 0.85 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px ); */
 
     background: rgba( 14, 33, 81, 0.8 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.10 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.40 );
     backdrop-filter: blur( 2px );
     -webkit-backdrop-filter: blur( 2px );
 
-
-  
-    /* background: rgba( 14, 56, 81, 0.85 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 20px );
--webkit-backdrop-filter: blur( 20px ); */
-
-    /* display: flex; */
     align-items: center;
     height: 75px;
     padding: 2px 5%;
 }
 h1 {
-    margin-top: 15px;
+    margin-top: 4px;
   text-align: center;
-  font-size: 29px;
+  font-size: 28px;
 }
+b{
+    font-size: 26px;
+  }
 @media (min-width: 350px) and (max-width: 710px) {
 	h1 {
         margin-top: 0px;
@@ -47,14 +37,23 @@ h1 {
 
 @media (min-width: 710px) and (max-width: 1025px) {
 	h1 {
-        margin-top: 0px;
+        margin-top: 5px;
         text-align: center;
-        font-size: 30px;
+        font-size: 22px;
+      }
+      b{
+        font-size: 25px;
       }
 }
 
 .slogan{
    
+    text-align: center;
+    color: #bbbaba;
+}
+
+.slogan a{
+   text-decoration: none;
     text-align: center;
     color: #fff;
 }
