--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,14 @@
     /* #0e2151cc */
     
   }
+
+  body {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+    color: #333; /* Color de texto */
+    background-color: #f8f8f8; /* Color de fondo */
+    margin: 0;
+    padding: 0;
+  }
+  
